Textual tweaks, add support for "icc"

--- a/tip/599.md
+++ b/tip/599.md
@@ -7,34 +7,40 @@
 -----
 # Abstract
 
-This TIP proposes to extend the version delivered by "package require tcl"
-(and "package require tk", and the same for any extension wanting to do this)
+This TIP proposes new commands "tcl::build-info"
+(and "tk::build-info", and the same for any extension wanting to do this)
 
 Example:
 <pre>
 $ tclsh8.7
-% package require tcl
+% tcl::build-info
 8.7a6+4a8309fafe073cae4fb210cfcd37e6accd8e31e7558aefab3d7f2ad6a27540c2.clang-1200.utf-16
-% lindex [split [package require tcl] +] 0
-8.7a6
-% expr {"utf-16" in [split [package require tcl] .]}
+% tcl::build-info utf-16
 1
+% tcl::build-info commit
+4a8309fafe073cae4fb210cfcd37e6accd8e31e7558aefab3d7f2ad6a27540c2
+% tcl::build-info compiler
+clang-1200
+% tcl::build-info version
+8.7a6
+% tcl::build-info patchlevel
+8.7a6
 
 $ tclsh9.0
-% package require tcl
+% tcl::build-info
 9.0a3+f896257cbcef7829503585ca26430bb097c8c33258a3785f7611bbc21c3ba080.gcc-1002
 
 >tclsh87
-% package require tcl
+% tcl::build-info
 8.7a6+4a8309fafe073cae4fb210cfcd37e6accd8e31e7558aefab3d7f2ad6a27540c2.magicsplat.msvc-1916.utf-16
 
 </pre>
 
-It's a simple extension of the version string, adding a '+' sign and some crucial build
-information, to be used in Fossil bug reports. This way we can determine quickly
+The build-info information consists of the version string, adding a '+' sign and some
+crucial build information, to be used in Fossil bug reports. This way we can determine quickly
 whether a 'static' build was used, whether a specific patched version (e.g. 'fedora',
 which has a slightly different directory layout) was used, just by asking the
-result of "package require tcl".
+result of "tcl::build-info".
 
 Another goal for this TIP is to provide additional information to applications using
 TIP #596: "Stubs support for Embedding Tcl in other applications". Such applications
@@ -48,7 +54,7 @@ e.g.:
 * "1.2.6"
 * "2.0a2"
 
-This TIP proposes the possibility to add optional build metadata, which MAY be denoted by
+This TIP proposes the possibility to get additional build metadata, which MAY be denoted by
 appending a plus sign and a series of dot separated identifiers immediately following the
 version. Identifiers MUST comprise only ASCII alphanumerics and hyphens [0-9A-Za-z-].
 Identifiers MUST NOT be empty. Build metadata MUST be ignored when determining version precedence.
@@ -61,20 +67,28 @@ Note that this is exactly the same way as how ["Semanic Versioning"](https://sem
 can add optional build metadata, that's not a coincidence. There's no need for Tcl to invent
 its own wheel.
 
-However, in Tcl, we want to use this information to build an unique version string which tells
-us crucial information about how Tcl (or Tk or ....) was built. Advantage: anyone submitting
-a bug report, we can ask to type "package require tcl" and it will help being able to reproduce
-the bug.
+The Tcl build process is adapted to retrieve the commit-id from Fossil or GIT such that
+it even survives a "make dist". So, if the Tcl source code was checked out from Fossil
+or GIT and built, then `tcl::build-info` will contain the correct commit-id. If -
+then - a "make dist" is used to create a tar.gz file, building Tcl from this
+distribution will still show the same commit in `tcl::build-info`. At this moment,
+only Fossil and GIT are supported, support for more VCS'es could be added in the future.
+
+In Tcl, we want to build an unique version string which tells us crucial information about
+how Tcl (or Tk or ....) was built. Advantage: anyone submitting a bug report, we can ask
+to type "tcl::build-info" and it will help being able to reproduce the bug.
 
 * The first identifier is always the Fossil commit-id. If the package doesn't come from fossil
   but from GIT, it's "git-&lt;commit-id&gt;". This way we can always locate the exact commit which
-  was used as base from the build.
+  was used as base from the build, even when building from a tarball which originated from Fossil or GIT.
 * All other identifiers are sorted alphabetical.
-* There are 3 (optional) predefined tags for the compiler used:
+* There are 4 (optional) predefined tags for the compiler used:
    "clang-xxxx"
    "gcc-xxxx"
+   "icc-xxxx"
    "msvc-xxxx"
-  where "xxxx" is the version of the compiler (two digits for major and two digits for minor version)
+  where "xxxx" is the version of the compiler (two digits for major and two digits for minor version).
+  More compilers will be added in the future, as desired.
 * Then there is the following list of (optional) identifiers. Presence of such identifier indicates
   that this is a non-standard build: the identifier string indicates what manner this
   build is non-standard (except for `utf-16`, which is standard in Tcl 8.x but not in Tcl 9.0).
@@ -127,17 +141,21 @@ the bug.
   could be multiple ones (e.g. "ubuntu" could decide to use the "debian"
   patches as well)
 
+* Calling `tcl::build-info <identifier>` will return `1` if the identifier is
+  present in the build-info, `0` if not. But there are 4 pseudo-identifiers:
+
+  | Identifier  | Meaning |
+  |:-------:|:----------------:|
+  | `commit`   | Returns the commit-id from Fossil (or GIT) |
+  | `compiler` | Returns the identifier identifying the compiler used |
+  | `patchlevel`| Returns the patchlevel |
+  | `version`    | Returns the version |
+
 * The functions `Tcl_FindExecutable`, `Tcl_InitSubsystems`, `Tcl_SetPanicProc` and
-  `TclZipfs_AppHook` are modified to return the version string as described in this
+  `TclZipfs_AppHook` are modified to return the build-info string as described in this
   TIP. Those functions are meant to be used during Tcl initialization, which allows
   to double-check for presence or absence of certain identifiers as needed by the
   application (e.g. signaling "no-thread" when thread-support is missing).
-
-* Functions like "package require" and "package vcompare" fully ignore these identifiers.
-
-* Using "package require Tcl" or "package require Tk" will return the version string
-  _without_ the additional identifiers. For compatibility reasons the full version
-  string is only returned when using "package require tcl"/"package require tk"
 
 * Deprecate the array elements tcl_platform[threaded] and tcl_platform[debug].
   In Tcl 9.0 those will be gone.
@@ -149,9 +167,12 @@ the bug.
 
 It has been suggested to put additional keys in tcl::pkgconfig. But tcl::pkgconfig
 does not only contain build information, it also contains installation configuration
-information (like "bindir,runtime") which is not useful in a version string. Also
-it would prevent the full version string to be usable in `Tcl_InitSubsystems()` and
+information (like "bindir,runtime") which is not useful in a build-info string. Also
+it would prevent the build-info string to be usable in `Tcl_InitSubsystems()` and
 friends (TIP #596), before any Tcl interpreter is created.
+
+An earlier implementation combined this approach with the "package" mechanism,
+but this was rejected.
 
 # Implementation
 
