New function in tip605 and alternative in 606 added.

--- a/tip/605.md
+++ b/tip/605.md
@@ -35,6 +35,22 @@ Tcl_GetObjectClassName(
 }
 </pre>
 
+# Alternatives
+
+The following alternative was posted by Donal Fellows on tcl-core:
+
+<pre>
+I’d prefer getting the class to getting the name of the class (the name can be navigated to from there cheaply) as that makes the expensive failure-possible operations be something you can more commonly avoid, but otherwise this seems fine. We could have the name lookup you propose as well. This appears to be an area where I simply didn’t think about putting in any API.
+
+The operation that I’m looking for is (probably; this is written from memory and I’ve not checked if it compiles):
+
+    Tcl_Class Tcl_GetClassOfObject(Tcl_Object object) {
+        return (Tcl_Class)(((Object *)object)->selfCls);
+    }
+
+Technically, the traversing of the thisPtr link is possible via Tcl_GetClassAsObject() and getting the name is the standard op. It’s the selfCls link that’s currently not exposed in the C API at all.
+</pre>
+
 ## Documentation
 
 The following documentation will be added in the **Tcl_GetObjectName** man page:
