--- a/tip/606.md
+++ b/tip/606.md
@@ -28,13 +28,34 @@ This TIP proposes to provide public Tk functions for the following private funct
 **TkWindow * Tk_GetOtherWindow(TkWindow * winPtr);**
 
 The public function will have the same parameters as the private functions.
-Only the names will start with "Tk_" instead of "Tkp".
+Only the names will start with "Tk\_" instead of "Tkp".
+
+To get the colors from a border I would propose the following function:
+
+**void Tk_Get3BorderColors(Tk_3DBorder * borderPtr, XColor * bgColorPtr, XColor * darkColorPtr, XColor * lightColorPtr);**
 
 # Rationale
 
 On creation of new Tk widget types in extensions it is necessary to call private Tk functions.
 So extensions depend on a specific Tk version.
 If the needed functions exist as public functions these dependencies are gone.
+
+# C-Implementation
+
+Here is the source code of the new function to return the color values of the border. Alternatively we could provide one function for each of the 3 color values. 
+
+<pre>
+void Tk_Get3BorderColors(
+                Tk_3DBorder * borderPtr,
+                XColor * bgColorPtr,
+                XColor * darkColorPtr,
+                XColor * lightColorPtr)
+{
+    bgColorPtr = ((TkBorder *)borderPtr)->bgColorPtr;
+    darkColorPtr = ((TkBorder *) borderPtr)->darkColorPtr;
+    lightColorPtr = ((TkBorder *) borderPtr)->lightColorPtr;
+}
+</pre>
 
 # Documentation
 
@@ -85,6 +106,10 @@ It is still to decide if each functions is documented in a separate page or if i
 > If both the container and embedded window are in the same process, this procedure will return either one, given the other.
 
 > Results: If winPtr is a container, the return value is the token for the embedded window, and vice versa. If the "other" window isn't in this process, NULL is returned.
+
+**void Tk_Get3BorderColors(Tk_3DBorder * borderPtr, XColor * bgColorPtr, XColor * darkColorPtr, XColor * lightColorPtr);**
+
+> The function return the 3 used color values of an border object. The color values are valid as long as the border object exists.
 
 # Copyright
 
