--- a/tip/568.md
+++ b/tip/568.md
@@ -71,7 +71,7 @@ error messages or codes. The caller is instructed that the return value
 need not be checked for **NULL**. The final output argument is a pointer to
 space where the length of the *foo* array returned may be written.  The
 length value written is of type ***SIZE*** which may be either *int*
-or *size_t* (see [[481]]).
+or *size_t* (see [[481]](481.md)).
 Documentation must be consulted to determine the conditions under which
 the caller may read, or even write to that array. This pattern is
 followed in the cases where **Foo** is **String**, **Unicode**,
@@ -194,7 +194,7 @@ standard error messages and codes are left in it. Otherwise, a pointer
 to the byte sequence representation is returned (after creating it, if
 necessary) and the number of bytes in the sequence is written to the
 storage at the output pointer, if it is not **NULL**.  Using the techniques
-from [[481]], the ***SIZE*** type holding the number of bytes may be
+from [[481]](481.md), the ***SIZE*** type holding the number of bytes may be
 either *int* or *size_t* .
 
 In Tcl 9.0, revise routines **Tcl_GetByteArrayFromObj** and
