Note registration change

--- a/tip/568.md
+++ b/tip/568.md
@@ -91,8 +91,8 @@ string values were revised to use a Modified UTF-8 encoding so that a larger
 number of international character sets could be supported.  This created
 two important facts pertaining to arbitrary binary data:
 (1) For reliable binary transfer, we could no longer simply write arbitrary
-bytes to a string representation; (2) General Tcl strings contain characters
-with codepoints outside the byte range (U+0000 - U+00FF).
+bytes to a string representation; (2) General Tcl strings may contain
+characters with codepoints outside the byte range (U+0000 - U+00FF).
 
 The rules for encoding string values in Tcl 8.1+ created the need for a new
 mechanism to accept, transmit, store, and produce arbitrary binary values,
@@ -208,6 +208,10 @@ arbitrary binary data, the commands **binary scan** and **binary encode**
 are revised to reject arguments that are not valid binary data.  When
 such a situation arises, it indicates a programming error.  These are better
 detected and fixed than accommodated.
+
+In Tcl 9.0, end registration of a **Tcl_ObjType** with the name **bytearray**.
+Callers of **Tcl_GetObjType**("bytearray") must be prepared to receive
+a **NULL** return value.
 
 # Compatibility
 
