finish compatibility section

--- a/tip/568.md
+++ b/tip/568.md
@@ -7,7 +7,7 @@
 	Post-History:
 	Keywords:       bytearray
 	Tcl-Version:    9.0
-	Tcl-Branch:	dgp-properbytearray
+	Tcl-Branch:	dgp-properbytearray, tip-568
 -----
 
 # Abstract
@@ -138,7 +138,8 @@ no string.  We can then use the byte sequence as the definitive value.
 This helps, but only so much.
 If anything causes the string representation to be generated, we lose this
 supplementary test, and we are back to being unable to use the byte sequence
-at all.
+at all, unless our usage is exactly to operate on the value according to
+the equivalence classes mentioned before.
 
 This is tricky enough that many callers of **Tcl_GetByteArrayFromObj** get
 it wrong, even the callers within Tcl itself.  See Tcl
@@ -168,6 +169,8 @@ In Tcl 8.7, the internals have been reworked so that two distinct
 **Tcl_ObjType** that rejects string values that contain any non-byte 
 character. The other tolerates such strings, so that the behavior of
 **Tcl_GetByteArrayFromObj** can be continued without any incompatibility.
+This preserves as much safe utility of the type as can be achieved without an
+interface incompatibility.
 
 The next evolutionary step is to incompatibly revise the documented
 interface for **Tcl_GetByteArrayFromObj** so that it can return **NULL**
@@ -214,6 +217,29 @@ Callers of **Tcl_GetObjType**("bytearray") must be prepared to receive
 a **NULL** return value.
 
 # Compatibility
+
+Most callers of **Tcl_GetByteArrayFromObj** are probably buggy, at least
+so far as they are not robust when operating on a value that is not
+valid binary data.  If the programs are written so that invalid data
+never reaches these calls, they will not experience any incompatibility.
+Otherwise, the incompatibilities provide the tools needed to make the
+code robust in that situation.
+
+Most callers will want to switch to **Tcl_GetBytesFromObj** as soon as
+they can start to require Tcl 8.7.  It is a better design for the job,
+and it will not have futher incompatibilities when bridging into Tcl 9.
+
+Any callers who cannot or will not adapt their code to
+use **Tcl_GetBytesFromObj** will continue to have **Tcl_GetByteArrayFromObj**
+that is substandard in exactly the same way it is now through all remaining
+Tcl 8 releases.  Only the adoption of Tcl 9 will force them to change
+their code, and that change will be nothing more than checking a return
+value for **NULL**.
+
+The incompatibilities in the values acceptable to **binary scan**
+and **binary encode** in Tcl 9 will cause no trouble in well-programmed
+code.  Only code that allows arbitrary strings to be passed as an argument
+runs a risk of new errors, and such code is better discovered and improved.
 
 # Reference Implementation
 
