--- a/tip/568.md
+++ b/tip/568.md
@@ -12,9 +12,11 @@
 
 # Abstract
 
-This TIP revises the public routines **Tcl_GetByteArrayObj** and
-**Tcl_SetByteArrayLength** to signal an error when they are passed
-an _objPtr_ that does not contain a valid byte sequence.
+This TIP proposes revision of the public routines **Tcl_GetByteArrayFromObj**
+and **Tcl_SetByteArrayLength** to signal an error when they are passed
+an _objPtr_ that does not contain a valid byte sequence, starting with
+Tcl 9.0.  It also proposes a new routine **Tcl_GetBytesFromObj** to
+provide robust bytearray use in Tcl 8.7.
 
 # Background
 
