Updated TIP 605 with implementation branch; started to merge suggestions

--- a/tip/605.md
+++ b/tip/605.md
@@ -6,17 +6,23 @@
 	Post-History:   
 	Keywords:       Tcl
 	Tcl-Version:    8.7
+	Tcl-Branch:     tip-605
 -----
 
 # Abstract
 
-This TIP intends to add the following public function to Tcl:
+This TIP intends to add the following public functions to Tcl:
 
-**Tcl_Obj * Tcl_GetObjectClassName(Tcl_Interp * interp, Tcl_Object object)**
+Tcl\_Class **Tcl\_GetClassOfObject**(Tcl\_Object *object*)
+
+Tcl\_Obj  **Tcl\_GetObjectClassName**(Tcl\_Interp *\*interp*, Tcl\_Object *object*)
 
 # Rationale
 
-There is currently a public function **Tcl_GetObjectName** to get the object name of an given Tcl_Obj. A similar function to get the class name does currently not exist. But these information is already existing in the internals of an oo object.
+The ability to get the current class of an object is missing, due to
+an API oversight. This TIP is about adding that capability.
+
+There is also currently a public function **Tcl\_GetObjectName** to get the object name of an given Tcl\_Obj. A similar function to get the class name does currently not exist. But these information is already existing in the internals of an oo object.
 
 # C Implementation
 
