Update status of TIP 604 to voting

--- a/tip/604.md
+++ b/tip/604.md
@@ -1,6 +1,6 @@
 # TIP 604: Printing Support for Text and Canvas Widgets
 	Author:         Kevin Walzer <kw@codebykevin.com>
-	State:          Draft
+	State:          Voting
 	Type:           Project
 	Created:        03-July-2021
 	Keywords:       Tk, desktop integration
