Update vote status of #603, re-generate index

--- a/tip/603.md
+++ b/tip/603.md
@@ -1,13 +1,17 @@
 # TIP 603: Get 'stat' Information of Open Files
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           Pending
+	Vote:           Done
 	Created:        19-Jun-2021
 	Post-History:
 	Keywords:       Tcl, file
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-603
+	Vote-Summary:	Accepted 4/1/0
+	Votes-For:	DKF, JN, KBK, SL
+	Votes-Against:	KW
+	Votes-Present:	none
 -----
 
 # Abstract
