Missed one YES and one PRESENT vote

--- a/tip/603.md
+++ b/tip/603.md
@@ -8,10 +8,10 @@
 	Keywords:       Tcl, file
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-603
-	Vote-Summary:	Accepted 4/1/0
-	Votes-For:	DKF, JN, KBK, SL
+	Vote-Summary:	Accepted 5/1/1
+	Votes-For:	AK, DKF, JN, KBK, SL
 	Votes-Against:	KW
-	Votes-Present:	none
+	Votes-Present:	FV
 -----
 
 # Abstract
