TIP609: update code sample formatting

--- a/tip/609.md
+++ b/tip/609.md
@@ -37,12 +37,14 @@ at the begin of Tcl_ThreadQueueEvent().
 By using conditional compilation and preprocessor symbols it should be
 in most cases possible to allow for backward compatibility, e.g.
 
-#ifdef TCL_QUEUE_TAIL_ALERT_IF_EMPTY
- Tcl_ThreadQueueEvent(threadId, &event->header, TCL_QUEUE_TAIL_ALERT_IF_EMPTY);
-#else
- Tcl_ThreadQueueEvent(threadId, &event->header, TCL_QUEUE_TAIL);
- Tcl_ThreadAlert(threadId);
-#endif
+<code>
+ #ifdef TCL_QUEUE_TAIL_ALERT_IF_EMPTY
+  Tcl_ThreadQueueEvent(threadId, &event->header, TCL_QUEUE_TAIL_ALERT_IF_EMPTY);
+ #else
+  Tcl_ThreadQueueEvent(threadId, &event->header, TCL_QUEUE_TAIL);
+  Tcl_ThreadAlert(threadId);
+ #endif
+</code>
 
 # Copyright
 
