--- a/tip/609.md
+++ b/tip/609.md
@@ -6,11 +6,12 @@
 	Post-History:   
 	Keywords:       Tcl
 	Tcl-Version:	8.7
+	Tcl-Branch:     tip-609
 -----
 
 # Abstract
 
-This TIP proposes to add two more qualifiers to the Tcl_ThreadQueueEvent()
+This TIP proposes to add a new qualifier to the Tcl_ThreadQueueEvent()
 function in order to allow implicit thread wakeup on empty queue condition.
 
 # Rationale
@@ -25,12 +26,12 @@ only once instead of twice, reducing potential spurious wakeups.
 
 # Specification
 
-Two new qualifiers TCL_QUEUE_TAIL_ALERT_IF_EMPTY and
-TCL_QUEUE_HEAD_ALERT_IF_EMPTY are added for Tcl_ThreadQueueEvent()
-eliminating the need to call Tcl_ThreadAlert() afterwards. Both qualifiers
-check for the state of the event queue of the target thread and perform
+The new qualifier TCL_QUEUE_ALERT_IF_EMPTY is added for Tcl_ThreadQueueEvent()
+eliminating the need to call Tcl_ThreadAlert() afterwards. This qualifier
+checks for the state of the event queue of the target thread and perform
 an implicit equivalent of Tcl_ThreadAlert() if the queue is empty
-at the begin of Tcl_ThreadQueueEvent().
+at the begin of Tcl_ThreadQueueEvent(). It can be used in combination
+('|') with the already existing qualifiers.
 
 # Compatibility
 
@@ -38,8 +39,8 @@ By using conditional compilation and preprocessor symbols it should be
 in most cases possible to allow for backward compatibility, e.g.
 
 <code>
- #ifdef TCL_QUEUE_TAIL_ALERT_IF_EMPTY
-  Tcl_ThreadQueueEvent(threadId, &event->header, TCL_QUEUE_TAIL_ALERT_IF_EMPTY);
+ #if (TCL_MAJOR_VERSION > 8) || (TCL_MINOR_VERSION > 6)
+  Tcl_ThreadQueueEvent(threadId, &event->header, TCL_QUEUE_TAIL|TCL_QUEUE_ALERT_IF_EMPTY);
  #else
   Tcl_ThreadQueueEvent(threadId, &event->header, TCL_QUEUE_TAIL);
   Tcl_ThreadAlert(threadId);
