Update TIP 604 status to accepted

--- a/tip/604.md
+++ b/tip/604.md
@@ -1,11 +1,16 @@
 # TIP 604: Printing Support for Text and Canvas Widgets
 	Author:         Kevin Walzer <kw@codebykevin.com>
-	State:          Voting
+	State:          Final
 	Type:           Project
 	Created:        03-July-2021
 	Keywords:       Tk, desktop integration
 	Tcl-Version:    8.7
-	Tk-Branch:      tk_print
+	Vote:			Done
+	Vote-Summary:   Accepted 9/0/0
+	Votes-For:      MC, JD, KK, FV, DKF, JN, SL, BG, KW 
+	Votes-Against:  none
+	Votes-Present:  none
+	Keywords:		Tk, desktop integration
 -----
 
 # Abstract
