TIP #511 is now merged to core-8-branch, so 'final'

--- a/tip/511.md
+++ b/tip/511.md
@@ -1,6 +1,6 @@
 # TIP 511: Implement Tcl_AsyncMarkFromSignal()
 	Author:         Christian Werner <undroidwish@googlemail.com>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        14-June-2018
