--- a/tip/610.md
+++ b/tip/610.md
@@ -22,7 +22,7 @@ A widely implelmented UI element in desktop and mobile applications is an "icon 
 
 The X11 implementation will be based on the "wm iconphoto" command and incorporate additional custom badge images that will be shipped with Tk. (For this TIP, the "wm iconphoto" command will be modified to return the image currently set as the iconphoto for a window if the command is called without an argument, similar to "wm title".)
 
-The Windows implementation will use the custom badges images developed for this TIP and render them via the native "ITaskbarList3::SetOverlayIcon" API. 
+The Windows implementation will use the custom badge images developed for this TIP and render them via the native "ITaskbarList3::SetOverlayIcon" API. 
 
 The Mac version will be completely native and implement a Tk wrapper over the NSDockTile API.
 
