Add screenshot link

--- a/tip/610.md
+++ b/tip/610.md
@@ -36,7 +36,7 @@ This command sets an icon badge over Wish's application icon as it appears in th
 
 # Example
 
-To set a badge icon with the number five ove the application icon:
+To set a badge icon with the number five over the application icon:
 
 	wm iconphoto . 5
 
@@ -45,6 +45,10 @@ To remove the badge:
 	wm iconphoto . ""
 
 A full demonstration of this command in action has been added to the Tk widget demo under the "Miscellaneous" section, "Window icons and badges." Since the API is very simple, one can get a better understanding of the functionality by actually testing it in the demo.
+
+Screenshot of the wm iconbadge on all three platforms:
+
+[https://imgur.com/gallery/mTqhgMl](https://imgur.com/gallery/mTqhgMl)
 
 
 # Implementation 
