Add link to tk_badges branch in tip 610

--- a/tip/610.md
+++ b/tip/610.md
@@ -53,7 +53,7 @@ Screenshot of the wm iconbadge on all three platforms:
 
 # Implementation 
 
-A draft implementation is currently under development in the tk_badges branch.
+A draft implementation is currently under development in the [tk_badges](https://core.tcl-lang.org/tk/timeline?r=tk_badges) branch.
 
 # Copyright
 
