--- a/tip/610.md
+++ b/tip/610.md
@@ -38,11 +38,11 @@ This command sets an icon badge over Wish's application icon as it appears in th
 
 To set a badge icon with the number five over the application icon:
 
-	wm iconphoto . 5
+	wm iconbadge . 5
 
 To remove the badge: 
 
-	wm iconphoto . ""
+	wm iconbadge . ""
 
 A full demonstration of this command in action has been added to the Tk widget demo under the "Miscellaneous" section, "Window icons and badges." Since the API is very simple, one can get a better understanding of the functionality by actually testing it in the demo.
 
