Added new function and name of branch

--- a/tip/605.md
+++ b/tip/605.md
@@ -40,7 +40,20 @@ Tcl_GetObjectClassName(
 }
 </pre>
 
-# Alternatives
+Donal Fellows added the following function:
+
+<pre>
+Tcl_Class
+Tcl_GetClassOfObject(
+    Tcl_Object object)
+{
+    return (Tcl_Class) ((Object *) object)->selfCls;
+}
+</pre>
+
+Both functions are created and exported in Branch [tip-605](https://core.tcl-lang.org/tcl/timeline?r=tip-605).
+
+# Discussion
 
 The following alternative was posted by Donal Fellows on tcl-core:
 
