Fix 'wm iconbadge' argument spec. The 'badge' argument is not optional (according to the current implementation).

--- a/tip/610.md
+++ b/tip/610.md
@@ -29,7 +29,7 @@ The Mac version will be completely native and implement a Tk wrapper over the NS
 The wm iconbadge command will present a script-level public API implementing the proposed interface, outlined below.
 
 
- > **wm iconbadge** _window?_ _badge?_
+ > **wm iconbadge** _window_ _badge_
 
 This command sets an icon badge over Wish's application icon as it appears in the Dock (macOS), taskbar (Windows) or application panel (X11). The "badge" argument at present is either a number to indicate a number of new messages or other data points, or an exclamation point to indicate a general call to attention. If the "badge" argument is set to an empty string, the badge icon is removed. 
 
