Document change in the wm iconphoto command.

--- a/tip/610.md
+++ b/tip/610.md
@@ -33,6 +33,7 @@ The wm iconbadge command will present a script-level public API implementing the
 
 This command sets an icon badge over Wish's application icon as it appears in the Dock (macOS), taskbar (Windows) or application panel (X11). The "badge" argument at present is either a number to indicate a number of new messages or other data points, or an exclamation point to indicate a general call to attention. If the "badge" argument is set to an empty string, the badge icon is removed. 
 
+Moreover, the **wm iconphoto** _window_ command will now return the current image set for the titlebar icon (instead of returning an error).
 
 # Example
 
