TIP302: continuous system clock: note added about implementation in AndroWish

--- a/tip/302.md
+++ b/tip/302.md
@@ -92,6 +92,8 @@ I have not yet written a reference implementation; I assume somebody with a
 more fluent practice of the core will do so more efficiently. However, gentle
 arm twisting, etc.
 
+As mentioned 2021-09-01 by Christian Werner, Androwish/Undroidwish has a reference implementation for Android and Unix.
+
 # Copyright
 
 This document has been placed in the public domain.
