--- a/tip/605.md
+++ b/tip/605.md
@@ -11,18 +11,22 @@
 
 # Abstract
 
+The ability to get the current class of an object is missing from the
+C API, due to
+an API oversight. This TIP is about adding that capability.
+
+# Rationale
+
 This TIP intends to add the following public functions to Tcl:
 
 Tcl\_Class **Tcl\_GetClassOfObject**(Tcl\_Object *object*)
 
 Tcl\_Obj  **Tcl\_GetObjectClassName**(Tcl\_Interp *\*interp*, Tcl\_Object *object*)
 
-# Rationale
-
-The ability to get the current class of an object is missing, due to
-an API oversight. This TIP is about adding that capability.
-
 There is also currently a public function **Tcl\_GetObjectName** to get the object name of an given Tcl\_Obj. A similar function to get the class name does currently not exist. But these information is already existing in the internals of an oo object.
+
+This was always information that should have been obtainable via the
+API.
 
 # C Implementation
 
@@ -66,7 +70,7 @@ The operation that I’m looking for is (probably; this is written from memory a
         return (Tcl_Class)(((Object *)object)->selfCls);
     }
 
-Technically, the traversing of the thisPtr link is possible via Tcl_GetClassAsObject() and getting the name is the standard op. It’s the selfCls link that’s currently not exposed in the C API at all.
+Technically, the traversing of the _thisPtr_ link is possible via `Tcl_GetClassAsObject()` and getting the name is the standard op. It’s the _selfCls_ link that’s currently not exposed in the C API at all.
 </pre>
 
 ## Documentation
