--- a/tip/605.md
+++ b/tip/605.md
@@ -74,7 +74,7 @@ The operation that I’m looking for is (probably; this is written from memory a
     }
 </pre>
 
-Technically, the traversing of the _thisPtr_ link is possible via `Tcl_GetClassAsObject()` and getting the name is the standard op. It’s the _selfCls_ link that’s currently not exposed in the C API at all.
+Technically, the traversing of the <em>thisPtr</em> link is possible via <code>Tcl_GetClassAsObject()</code> and getting the name is the standard op. It’s the <em>selfCls</em> link that’s currently not exposed in the C API at all.
 </blockquote>
 
 ## Documentation
