Added explanatory paragraph

--- a/tip/605.md
+++ b/tip/605.md
@@ -77,6 +77,10 @@ The operation that I’m looking for is (probably; this is written from memory a
 Technically, the traversing of the <em>thisPtr</em> link is possible via <code>Tcl_GetClassAsObject()</code> and getting the name is the standard op. It’s the <em>selfCls</em> link that’s currently not exposed in the C API at all.
 </blockquote>
 
+This discussion was resolved by adding the above function to the TIP
+on the grounds that having both functions is fine and they serve
+slightly different use-cases.
+
 ## Documentation
 
 The following documentation will be added in the **Tcl_GetObjectName** man page:
