Mark 605 as in-vote

--- a/tip/605.md
+++ b/tip/605.md
@@ -2,6 +2,7 @@
 	Author:         René Zaumseil <r.zaumseil@freenet.de>
 	State:          Draft
 	Type:           Project
+	Vote:           In progress
 	Created:        15-Jul-2021
 	Post-History:   
 	Keywords:       Tcl
