TIP302: Add reference to implementation by Sergey.

--- a/tip/302.md
+++ b/tip/302.md
@@ -94,6 +94,8 @@ arm twisting, etc.
 
 As mentioned 2021-09-01 by Christian Werner, Androwish/Undroidwish has a reference implementation for Android and Unix.
 
+As mentioned 2021-09-03 by Sergey Blester, the following TCL branch contains a well tested and solid solution for Unix and Windows: <https://core.tcl-lang.org/tcl/tktview/fdfbd5e10fefdb605abf34f65535054c323d9394>
+
 # Copyright
 
 This document has been placed in the public domain.
