--- a/tip/611.md
+++ b/tip/611.md
@@ -62,7 +62,7 @@ refletion in the central vertical axis.
 A reference implementation for rotating an image in place exists as
 a standalone extension -- https://wiki.tcl-lang.org/page/rphoto.
 
-Moreover, Christian Werner has proposed an implementation for this TIP for both rotation and reflection, see [https://core.tcl-lang.org/tk/tktview/2058b607301bca07ed3bea2114579a01a42a6756]
+Moreover, Christian Werner has proposed an implementation for this TIP for both rotation and reflection, see (https://core.tcl-lang.org/tk/tktview/2058b607301bca07ed3bea2114579a01a42a6756)
 
 # Copyright
 
