--- a/tip/568.md
+++ b/tip/568.md
@@ -1,13 +1,17 @@
 # TIP 568: Revise ByteArray Routines To Support Proper Value Extraction
 	Author:         Don Porter <dgp@users.sourceforge.net>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        4-Mar-2020
 	Post-History:
 	Keywords:       bytearray
 	Tcl-Version:    9.0
 	Tcl-Branch:	dgp-properbytearray, tip-568
+	Vote-Summary:	Accepted 6/0/1
+	Votes-For:	DP, KK, JN, SL, AK, KW
+	Votes-Against:	none
+	Votes-Present:	FV
 -----
 
 # Abstract
