Revising the text so that the angle of rotation is a multiple of 90 degrees instead of -1/1. This leaves room for future enhancement to arbitrary angles. Also commenting on the proposed patch, as it accepts any angle and rounds them off. An alternative would be to issue an error if the angle is not a multiple of 90 degrees.

--- a/tip/611.md
+++ b/tip/611.md
@@ -47,9 +47,10 @@ format for which such a facility is useful.
 
 The syntax is:
 
-    $img rotate -1/1
+    $img rotate -90/90
 
-where -1 means a clockwise rotation and 1 a counter-clockwise rotation.
+where -90 means a clockwise rotation and 90 a counter-clockwise rotation.
+(Note: the angle should for the moment be a multiple of 90 degrees.)
 
 For reflection the syntax is:
 
@@ -63,6 +64,10 @@ A reference implementation for rotating an image in place exists as
 a standalone extension -- https://wiki.tcl-lang.org/page/rphoto.
 
 Moreover, Christian Werner has proposed an implementation for this TIP for both rotation and reflection, see <https://core.tcl-lang.org/tk/tktview/2058b607301bca07ed3bea2114579a01a42a6756>
+
+The patch accepts angles other than multiples of 90 degrees and then
+determines the closest multiple. An alternative could be to issue an
+error message.
 
 # Copyright
 
