TIP 610 in voting status

--- a/tip/610.md
+++ b/tip/610.md
@@ -1,6 +1,6 @@
 # TIP 610: Icon Badges
 	Author:         Kevin Walzer <kw@codebykevin.com>
-	State:          Draft
+	State:          Voting
 	Type:           Project
 	Created:        21-August-2021
 	Keywords:       Tk, desktop integration
