Update status of TIP 610

--- a/tip/610.md
+++ b/tip/610.md
@@ -1,10 +1,15 @@
 # TIP 610: Icon Badges
 	Author:         Kevin Walzer <kw@codebykevin.com>
-	State:          Voting
+	State:          Final
 	Type:           Project
 	Created:        21-August-2021
 	Keywords:       Tk, desktop integration
 	Tcl-Version:    8.7
+	Vote: 	        Done
+	Vote-Summary:   Accepted 5/0/0
+	Votes-For:      MC, SL, JN, FV, KW 
+	Votes-Against:  none
+	Votes-Present:  none
 	Keywords:		Tk, desktop integration
 -----
 
