Tcl-Branch header can only handle one branch

--- a/tip/568.md
+++ b/tip/568.md
@@ -7,7 +7,8 @@
 	Post-History:
 	Keywords:       bytearray
 	Tcl-Version:    9.0
-	Tcl-Branch:	dgp-properbytearray, tip-568
+	Tcl-Branch:	    dgp-properbytearray
+	Tcl-Branch:     tip-568
 	Vote-Summary:	Accepted 6/0/1
 	Votes-For:	DP, KK, JN, SL, AK, KW
 	Votes-Against:	none
